--- a/app/views/pages/cal.html.erb
+++ b/app/views/pages/cal.html.erb
@@ -3,7 +3,7 @@
 
   <tr>
     <% (1..@n).each do |i| %>
-    <th>k[i,j]</th>
+    <th>Загроза[Номе активу,Номер загрози]</th>
     <th>x</th>
     <th>f</th>
     <%end%>
@@ -13,7 +13,7 @@
       <tr>
         <% (1..@n).each do |i| %>
         <td>
-          <%= "k[#{i},#{j}]"%>
+          <%= "Загроза[#{i},#{j}]"%>
         </td>
 
         <td>
@@ -30,29 +30,39 @@
 <h2>Step 2-8</h2>
 <table>
   <tr>
-    <th>A[i]</th>
-    <th>a</th>
-    <th>r</th>
-    <th>v</th>
-    <th>Y</th>
-    <th>S</th>
-    <th>Z</th>
-    <th>U</th>
-    <th>O</th>
-    <th>Y_R</th>
+    <th>Актив i</th>
+    <th>Агрегований коєфіціент інциденту</th>
+    <th>Оцінка ризику безпеки МІС</th>
+    <th>Важливість активу</th>
+    <th>Міркування експертів</th>
+    <th>Загальна сума фінансових збитків при реалізації загрози</th>
+    <th>Сума резерву фінансових збитків</th>
+    <th>U(z)</th>
+    <th>Агрегування збитків та ризиків</th>
+    <th>Міркування експертів з врахуванням фінансових збитків</th>
   </tr>
-  <%(1..@n).each do |i|%>
+  <tr>
+    <td>1</td>
+    <td><%=@al_a[1].round(4)%></td>
+    <td><%=@r_a[1].round(4)%></td>
+    <td><%=@v[1].round(2)%></td>
+    <td rowspan=<%=@n%>><%=@df_y[@y_i]%></td>
+    <td><%=@s[1].round(4)%></td>
+    <td><%=@z[1].round(2)%></td>
+    <td><%=@u[1].round(4)%></td>
+    <td><%=@o[1].round(4)%></td>
+    <td rowspan=<%=@n%>><%=@df_y_r[@y_i]%></td>
+  </tr>
+  <%(2..@n).each do |i|%>
     <tr>
       <td><%=i%></td>
       <td><%=@al_a[i].round(4)%></td>
       <td><%=@r_a[i].round(4)%></td>
       <td><%=@v[i].round(2)%></td>
-      <td><%=@df_y[i]%></td>
       <td><%=@s[i].round(4)%></td>
       <td><%=@z[i].round(2)%></td>
       <td><%=@u[i].round(4)%></td>
       <td><%=@o[i].round(4)%></td>
-      <td><%=@df_y_r[i]%></td>
     </tr>
   <%end%>
 </table>
