update other params

--- a/app/views/pages/cal.html.erb
+++ b/app/views/pages/cal.html.erb
@@ -5,7 +5,7 @@
     <% (1..@n).each do |i| %>
     <th>Загроза[Номе активу,Номер загрози]</th>
     <th>x</th>
-    <th>f</th>
+    <th>Коєфіціент інциденту</th>
     <%end%>
   </tr>
   <% (1..@m).each do |j| %>
@@ -34,12 +34,12 @@
     <th>Агрегований коєфіціент інциденту</th>
     <th>Оцінка ризику безпеки МІС</th>
     <th>Важливість активу</th>
-    <th>Міркування експертів</th>
+    <th>Міркування експертів (Ступень ризику безпеки МІС аеропорту)</th>
     <th>Загальна сума фінансових збитків при реалізації загрози</th>
     <th>Сума резерву фінансових збитків</th>
     <th>U(z)</th>
     <th>Агрегування збитків та ризиків</th>
-    <th>Міркування експертів з врахуванням фінансових збитків</th>
+    <th>Міркування експертів з врахуванням фінансових збитків (Ступень ризику безпеки МІС аеропорту)</th>
   </tr>
   <tr>
     <td>1</td>
@@ -110,7 +110,7 @@
   <tr>
     <th>Рівень міркування </th>
     <th>y</th>
-    <th>Ступінь</th>
+    <th>Ступень ризику безпеки МІС аеропорту</th>
   </tr>
   <%@y.each do |i,y|%>
     <tr>
@@ -159,7 +159,7 @@
   <tr>
     <th>Рівень міркування </th>
     <th>y</th>
-    <th>Ступінь</th>
+    <th>Ступень ризику безпеки МІС аеропорту</th>
   </tr>
   <%@y_r.each do |i,y|%>
     <tr>
